--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -930,7 +930,7 @@ The font may be embedded but must only be installed temporarily on other systems
 <h3>Do we have the latest version of FontBakery installed?</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/fontbakery_version&gt;</div>
 
-<details><summary>🔥 <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Current Font Bakery version is 0.8.11, while a newer 0.8.12 is already available. Please upgrade it with 'pip install -U fontbakery' [code: outdated-fontbakery]</p>
+<details><summary>🔥 <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Current Font Bakery version is 0.8.11, while a newer 0.8.13 is already available. Please upgrade it with 'pip install -U fontbakery' [code: outdated-fontbakery]</p>
 </span></li></ul></div></details>
 <h3>Font contains glyphs for whitespace characters?</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/whitespace_glyphs&gt;</div>
@@ -1111,42 +1111,22 @@ The font may be embedded but must only be installed temporarily on other systems
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/outline_alignment_miss&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs have on-curve points which have potentially incorrect y coordinates:</p>
-<pre><code>* H (U+0048): X=240.0,Y=2.0 (should be at baseline 0?) [code: found-misalignments]
+<pre><code>* J (U+004A): X=54.5,Y=-1.5 (should be at baseline 0?) [code: found-misalignments]
 </code></pre>
 </span></li></ul></div></details>
 <h3>Are any segments inordinately short?</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/outline_short_segments&gt;</div>
 
 <details><summary>⚠️ <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The following glyphs have segments which seem very short:</p>
-<pre><code>* A (U+0041) contains a short segment B&lt;&lt;251.0,23.0&gt;-&lt;251.0,13.0&gt;-&lt;245.0,6.5&gt;&gt;
+<pre><code>* K (U+004B) contains a short segment B&lt;&lt;203.5,462.0&gt;-&lt;209.0,449.0&gt;-&lt;220.0,449.0&gt;&gt;
 
-* H (U+0048) contains a short segment B&lt;&lt;81.0,0.0&gt;-&lt;75.0,0.0&gt;-&lt;69.5,3.5&gt;&gt;
+* K (U+004B) contains a short segment B&lt;&lt;235.5,57.0&gt;-&lt;241.0,45.0&gt;-&lt;241.0,35.0&gt;&gt;
 
-* H (U+0048) contains a short segment B&lt;&lt;69.5,3.5&gt;-&lt;64.0,7.0&gt;-&lt;60.0,22.0&gt;&gt;
+* M (U+004D) contains a short segment B&lt;&lt;383.0,597.0&gt;-&lt;390.0,584.0&gt;-&lt;398.0,573.5&gt;&gt;
 
-* H (U+0048) contains a short segment B&lt;&lt;245.0,800.0&gt;-&lt;259.0,800.0&gt;-&lt;266.5,797.5&gt;&gt;
+* M (U+004D) contains a short segment B&lt;&lt;398.0,573.5&gt;-&lt;406.0,563.0&gt;-&lt;417.0,563.0&gt;&gt;
 
-* H (U+0048) contains a short segment B&lt;&lt;266.5,797.5&gt;-&lt;274.0,795.0&gt;-&lt;274.0,784.0&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;215.0,503.0&gt;-&lt;222.0,489.0&gt;-&lt;232.0,489.0&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;393.0,780.0&gt;-&lt;393.0,793.0&gt;-&lt;401.5,796.5&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;621.0,9.0&gt;-&lt;615.0,0.0&gt;-&lt;607.0,0.0&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;441.0,4.5&gt;-&lt;432.0,9.0&gt;-&lt;432.0,22.0&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;248.0,18.0&gt;-&lt;248.0,4.0&gt;-&lt;240.0,2.0&gt;&gt;
-
-* H (U+0048) contains a short segment B&lt;&lt;240.0,2.0&gt;-&lt;232.0,0.0&gt;-&lt;217.0,0.0&gt;&gt;
-
-* K (U+004B) contains a short segment B&lt;&lt;202.0,462.0&gt;-&lt;206.0,449.0&gt;-&lt;214.0,449.0&gt;&gt;
-
-* K (U+004B) contains a short segment B&lt;&lt;569.0,794.5&gt;-&lt;576.0,789.0&gt;-&lt;576.0,778.0&gt;&gt;
-
-* K (U+004B) contains a short segment B&lt;&lt;444.0,0.0&gt;-&lt;431.0,0.0&gt;-&lt;424.0,8.5&gt;&gt;
-
-* N (U+004E) contains a short segment B&lt;&lt;478.5,399.0&gt;-&lt;485.0,389.0&gt;-&lt;492.0,389.0&gt;&gt;
+* M (U+004D) contains a short segment B&lt;&lt;417.0,563.0&gt;-&lt;429.0,563.0&gt;-&lt;437.5,574.0&gt;&gt;
 
 * T (U+0054) contains a short segment B&lt;&lt;234.5,669.0&gt;-&lt;228.0,675.0&gt;-&lt;219.0,675.0&gt;&gt;
 
