deploy: 7601b0255883667904fe6a330fffc89119ec6190

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -73,24 +73,24 @@
             </tr>
             <tr>
                 <td>0</td>
-                <td>8</td>
-                <td>6</td>
-                <td>127</td>
                 <td>7</td>
-                <td>94</td>
+                <td>6</td>
+                <td>129</td>
+                <td>7</td>
+                <td>97</td>
             </tr>
             <tr>
                 <td>0%</td>
                 <td>4%</td>
                 <td>3%</td>
-                <td>71%</td>
+                <td>72%</td>
                 <td>4%</td>
-                <td>53%</td>
+                <td>54%</td>
             </tr>
             </table>
             
 <p><strong>Note:</strong> The following loglevels were omitted in this report: SKIP, INFO, PASS, DEBUG</p>
-<h2>&lt;Section: Google Fonts&gt; 🔥🔥🔥🔥🔥⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
+<h2>&lt;Section: Google Fonts&gt; 🔥🔥🔥🔥🔥⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️ℹ️ℹ️ℹ️</h2>
 <h3>Checking OS/2 fsType does not impose restrictions.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/fstype&gt;</div>
 
@@ -921,16 +921,11 @@ The font may be embedded but must only be installed temporarily on other systems
 
 <details><summary>⚠️ <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>This font file does not have a 'meta' table. [code: lacks-meta-table]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: Universal&gt; 🔥🔥🔥⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️</h2>
+<h2>&lt;Section: Universal&gt; 🔥🔥⚠️⚠️⏩⏩⏩⏩⏩⏩⏩⏩⏩ℹ️ℹ️</h2>
 <h3>Checking OS/2 Metrics match hhea Metrics.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/os2_metrics_match_hhea&gt;</div>
 
 <details><summary>🔥 <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>OS/2 sTypoAscender (840) and hhea ascent (1000) must be equal. [code: ascender]</p>
-</span></li></ul></div></details>
-<h3>Do we have the latest version of FontBakery installed?</h3>
-<div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/fontbakery_version&gt;</div>
-
-<details><summary>🔥 <strong>fonts/ttf/Mebo-Regular.ttf</strong></summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>Current Font Bakery version is 0.8.11, while a newer 0.8.13 is already available. Please upgrade it with 'pip install -U fontbakery' [code: outdated-fontbakery]</p>
 </span></li></ul></div></details>
 <h3>Font contains glyphs for whitespace characters?</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/whitespace_glyphs&gt;</div>
@@ -1100,7 +1095,6 @@ The font may be embedded but must only be installed temporarily on other systems
 </code></pre>
 <p>[code: contour-count]</p>
 </span></li></ul></div></details>
-<h2>&lt;Section: fontbakery.profiles.hhea&gt; ⚠️</h2>
 <h3>Checking Vertical Metric Linegaps.</h3>
 <div>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/linegaps&gt;</div>
 
